<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.nexus_lab.iot_service_blockchain.sample.crystalball.SettingsActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:orderInCategory="1"
        android:title="@string/action_refresh_service"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="1"
        android:title="@string/action_edit_service"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="2"
        android:title="@string/action_delete_service"
        app:showAsAction="ifRoom" />
</menu>