<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:theme="@style/Theme.AppBar"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.Popup" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2"
                android:background="@android:color/transparent"
                android:theme="@style/ThemeOverlay.ControlBar.Transparent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/play_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/icon_screenshot"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_main_to_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize8dp"
                    app:srcCompat="@drawable/screenshot_background" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/play"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:transitionName="@string/transition_details_to_player"
                    app:layout_constraintBottom_toBottomOf="@+id/play_background"
                    app:layout_constraintEnd_toEndOf="@+id/play_background"
                    app:layout_constraintStart_toStartOf="@+id/play_background"
                    app:layout_constraintTop_toTopOf="@+id/play_background"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize8dp"
                    app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_service_name"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/service_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_service_name" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_service_version"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/service_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_service_version" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_service_description"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/service_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_service_description" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_service_last_update_time"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/service_last_update_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_service_last_update_time" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_organization_id"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/organization_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_organization_id" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_device_name"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_device_name" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_device_id"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/device_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_device_id" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_device_description"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/device_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_device_description" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2"
                android:layout_marginEnd="@dimen/space_2"
                app:dividerColor="@color/blue_grey_50" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_1"
                    android:text="@string/text_device_last_update_time"
                    android:textAppearance="@style/TextAppearance.Overline" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/device_last_update_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_device_last_update_time" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>